--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,9 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+
+    compile 'com.github.chrisbanes:PhotoView:2.1.2'
 }
+
